--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,14 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos
+
+############################
+#                          #
+#          CUSTOM          #
+#                          #
+############################
+
+btrfs-sync.service
+btrfs-sync.timer
+
+btrfs-sync-wrapper
